@@ -1,5 +1,8 @@
 2019-03-07  Jonathan Wakely  <jwakely@redhat.com>
 
+	* doc/xml/manual/status_cxx2020.xml: Update C++20 status.
+	* doc/html/*: Regenerate.
+
 	P0356R5 Simplified partial function application
 	* include/std/functional [C++20] (_Bind_front, _Bind_front_t): Define
 	helpers for bind_front.
